fix handling of `.Final` et.al. qualifiers